# Tiny-rasterizer

./: .gitignore  CMakeLists.txt  CONFIG_USAGE.md  GPU_OPTIMIZATION.md  README.md  debug.md  quick_switch.sh
config/: shader_config.yaml
include/: Config.h  Shader.h  Window.h
shaders/: fragment.glsl  rotation_matrix.glsl  water.glsl
src/: Config.cpp  Shader.cpp  Window.cpp  main.cpp
